src/scss/style.scss
/* ... */
body{
    font-family: 'Myria-Pro', 'MyriadArabic',Georgia, 'Times New Roman', Times, serif;
}
body>.container-fluid{
    padding-left: 0;
    padding-right: 0;
    overflow: hidden;
}
.custom-navbar {
    margin-bottom: 80px;
    background: transparent;
    border: none;
    padding-top: 44px;
   position: relative;
  
}
#custom-right>li>a{
    margin-left: 47px;
}
.btn-app{
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $primary-color;
    background-color: $bg-button;
    border: 1px solid  $bg-button;
    border-radius: 50px;
    //cursor: pointer;
    transition-property: color,background-color;
    transition-duration: 0.3s;
}
#custom-left .btn-app{
    padding: 18px 33px 18px 18px;
    margin-left: 50px;
}
.btn-app > span{
    padding-left: 22px;
}

.navbar-default .navbar-nav > li > a{
    
    font-size: 16px;
    color: $second-color;
    transition-property: color;
    transition-duration: 0.3s;
    
}

.btn-app:hover, .btn-app:focus, .btn-app:active, .btn-app:focus:active{
    color: $primary-color;
    background-color: $bg-button-dark;
}

.header {
    background-image: url(../images/HBg.jpg);
    background-position: center center;
    background-size: cover;
    height: 1000px;
    min-width: 100%;
    //z-index: -3;
    position: relative;
    
}

.header .overlay {
    background: rgba(244,244,245,0.40);
    height: 1000px;
    //z-index: -2;
}

.brand{
    
    position: absolute;
    left:calc(50% - 70px);
    bottom: 28%;
    display: block;
    
}
#help{
    color: rgba(27,28,30,0.4);
}
h1{
    font-family: 'Myria-Pro';
    font-size: 62px;
    color: $second-color;
    margin-bottom: 34px;
}
.p-header{
    font-family: 'MyriadArabic';
    font-size: 20px;
    line-height: 1.75;
    color:$p-color;
    width: 786px;
    position: absolute;
    left:calc(50% - 393px);
    
    
}

.custom-btn{
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $second-color;
    background-color: transparent;
    border-radius: 50px;
    border-color: rgba(38,39,45,0.10);
    

}
.video.custom-btn{
    padding-top: 20px;
    padding-bottom: 20px;
    padding-right: 77px;
    margin-top: 120px;
    margin-bottom: 55px;
    position: relative;
    left: 10%;
}
.custom-btn>i.fa{
    margin-right: 15px;
    margin-left: 50px;
}
/*.images>img{
    z-index: -1;
}*/

.feature1{
    
    background-color: $primary-color;
    padding-left: 225px;
    padding-right: 225px;
    padding-top: 122px;
    padding-bottom: 1px;
    position: absolute;
    z-index: 1;
    
}
hr.hr{
    border-bottom: 1px solid rgba($color: #26272d, $alpha: 0.05);
    width: 1170px;
    margin-top: 145px;
    margin-bottom: 42px;
}

.custom-heading{
     font-family: 'Myria-Pro';
    font-size: 26px;
    color: $second-color;
    margin-top: 45px;
    margin-bottom: 50px;
}
.paragraph{
    font-family:'MyriadArabic';
    font-size: 18px;
    line-height: 2;
    color: $p-color;
    max-width: 489px;
}
.column>p.paragraph:first-of-type{
    margin-bottom: 40px;
}

.r-margin{
    margin-left: 0;
    margin-right: 0;
}
.feature2{
    background-color: $primary-color;
    padding-right: 215px;
    position: relative;
}
.heading2{
    font-size: 42px;
    margin-top: 224px;
    max-width: 486px;
    line-height: 1.5;
}

.passcode{
    margin-top: 135px;
    position: relative;
    left: calc(50% - 394px);
}
.m-passcode>img{
    margin-top: 86px;
    position: relative;
    left: 28%;
   
}
.passcode .btn-app{
    padding: 18px 26px 16px 19px;
    margin-left: 20px;
}
.passcode .btn-app >span{
    padding-left: 77px;
}

.passcode .custom-btn{
    padding: 18px 44px 16px 44px;
    
}
.passcode .custom-btn:hover,.passcode .custom-btn:focus, .passcode .custom-btn:active, .passcode .custom-btn:focus:active{
color: $primary-color;
    background-color: $bg-button;
    border: 1px solid  $bg-button;
    transition-property: color,background-color;
    transition-duration: 0.3s;
}
.feature3{
    background-color: $primary-color;
    padding-top: 207px;
    padding-bottom: 198px;
}


.feature3  img{
    position: relative;
    left: 9%;
}

.feature3  .column{
    padding-right: 75px;
}

.feature3 .heading2{
    margin-top: 0;
}
.p-small{
    font-family: 'MyriadArabic';
    margin-top: 100px;
    margin-left: 31%;
    color: $second-color;

}
ul.list-inline.text-right{
    margin-left: 28%;
    margin-top: 31px;
}
.feature4{
    background-color: $third-color;
    position: relative;
}
.feature4 .heading2{
    margin-top: 142px;
    max-width: 100%;
}
.feature4 .r-margin .col-xs-12{
    position: relative;
}
hr.sm-hr{
    border-top: 2px solid $bg-button;
    width: 50px;
    margin-top: 48px;
    margin-bottom: 46px;
}
h6.h-small{
    color: $p-color;
    font-family: 'MyriadArabic';
    margin-bottom: 45px;
}
.landing-screen {
    
   position: relative;
   
}
img.L-S4{
    position: relative;
    left: 6%;
}

img.L-S3 {
    position: relative;
    left: 26%;
}

img.L-S {
    position: relative;
    left: 44%;
}

img.L-S1 {
    position: absolute;
    top: 10%;
    right: 81.1%;
}

img.L-S2 {
    position: absolute;
    top: 10%;
    left: 13%;
}

.GitApp{
    background-color: $third-color;
    position: relative;
    padding-bottom: 131px;
}

.GitApp .custom-heading{
    font-size: 42px;
}
.GitApp  h6.h-small:first-child {
    color: rgba($h-color,0.50);
}
.GitApp  h6.h-small:last-of-type {
    color: rgba($h-color,0.30);
}
input.invite {
    font-family: 'MyriadArabic';
    font-size: 16px;
    background-color: rgba($third-color,0.20);
    border-radius: 25px;
    border: 1px solid $brder-color;
    width: 502px;
    height: 50px;
    line-height: 50px;
    margin-bottom: 69px;
}
button.btn.Form-submit {
    font-family: 'MyriadArabic';
    font-size: 16px;
    color: $primary-color;
    background-color: $g-color;
    border-radius: 21px;
    width: 164px;
    height: 42px;
    padding-right: 31px;
    padding-left: 24px;
    position: absolute;
    left: 552px;
    bottom: 140px;
}
/* ... */

